--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "animate.css": "3.7.0",
     "axios": "0.18.0",
     "node-sass": "4.12.0",
     "react": "^16.10.2",
     "react-animated-css": "1.2.1",
     "react-dom": "^16.10.2",
+    "react-facebook": "8.0.4",
     "react-html-parser": "2.0.2",
     "react-icons": "3.7.0",
     "react-medium-editor": "^1.8.1",
